--- a/package.json
+++ b/package.json
@@ -10,10 +10,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.10.2",
+    "@react-navigation/native": "^5.8.2",
+    "@react-navigation/stack": "^5.11.1",
+    "axios": "^0.21.0",
     "native-base": "^2.13.14",
+    "qs": "^6.9.4",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-dotenv": "^2.4.2",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.12.0",
+    "react-native-vector-icons": "^7.1.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
