--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.8.2",
     "@react-navigation/stack": "^5.11.1",
     "axios": "^0.21.0",
+    "dateformat": "^3.0.3",
     "native-base": "^2.13.14",
     "qs": "^6.9.4",
     "react": "16.13.1",
