--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "qs": "^6.9.4",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-bottomsheet-reanimated": "^0.0.22",
     "react-native-dotenv": "^2.4.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.1",
@@ -27,6 +28,7 @@
     "react-native-screens": "^2.12.0",
     "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
