--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qs": "^6.9.4",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-bootsplash": "^2.2.8",
     "react-native-bottomsheet-reanimated": "^0.0.22",
     "react-native-dotenv": "^2.4.2",
     "react-native-gesture-handler": "^1.8.0",
