--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,37 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+android/app/src/main/assets/index.android.bundle
+android/app/src/main/res/drawable-hdpi/node_modules_reactnavigation_stack_src_views_assets_backicon.png
+android/app/src/main/res/drawable-mdpi/node_modules_reactnavigation_stack_src_views_assets_backicon.png
+android/app/src/main/res/drawable-mdpi/node_modules_reactnavigation_stack_src_views_assets_backiconmask.png
+android/app/src/main/res/drawable-mdpi/src_assets_avatar.png
+android/app/src/main/res/drawable-mdpi/src_assets_bags.png
+android/app/src/main/res/drawable-mdpi/src_assets_gopay.png
+android/app/src/main/res/drawable-mdpi/src_assets_header.png
+android/app/src/main/res/drawable-mdpi/src_assets_image.jpg
+android/app/src/main/res/drawable-mdpi/src_assets_mastercard.png
+android/app/src/main/res/drawable-mdpi/src_assets_posindo.png
+android/app/src/main/res/drawable-mdpi/src_assets_shoppingbag.png
+android/app/src/main/res/drawable-mdpi/src_assets_stargrey.png
+android/app/src/main/res/drawable-mdpi/src_assets_staryellow.png
+android/app/src/main/res/drawable-xhdpi/node_modules_reactnavigation_stack_src_views_assets_backicon.png
+android/app/src/main/res/drawable-xxhdpi/node_modules_reactnavigation_stack_src_views_assets_backicon.png
+android/app/src/main/res/drawable-xxxhdpi/node_modules_reactnavigation_stack_src_views_assets_backicon.png
+android/app/src/main/res/raw/app.json
+android/app/src/main/res/raw/node_modules_nativebase_dist_src_basic_icon_nbicons.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_antdesign.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_entypo.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_evilicons.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_feather.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_fontawesome.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_fontawesome5free_meta.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_fontawesome5free.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_fontisto.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_foundation.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_ionicons.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_materialcommunityicons.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_materialicons.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_octicons.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_simplelineicons.json
+android/app/src/main/res/raw/node_modules_reactnativevectoricons_glyphmaps_zocial.json
